# djoek

./: .dockerignore  .drone.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile-djoek  Dockerfile-front  docker-compose.yml  migrate.py  pyproject.toml
booth/: .eslintrc.js  README.md  package.json  vue.config.js
booth/public/: index.html
booth/src/: App.vue  api.js  auth.js  main.js  utils.js
booth/src/components/: Booth.vue  Console.vue  ItemCard.vue  Playlist.vue  PlaylistItem.vue  Search.vue  SearchButton.vue  SearchResult.vue  Status.vue  StreamCaster.vue  StreamPlayer.vue  VoteButton.vue
booth/src/plugins/: api.js  auth.js  vuetify.js
booth/src/store/: index.js
conf/: default.conf  initdb.sh  mpd.conf
djoek/: __init__.py  api.py  auth.py  download.py  models.py  mpdclient.py  player.py  schemas.py  settings.py  util.py
djoek/providers/: __init__.py  registry.py  soundcloud.py  youtube.py
player/: index.html  player.css  player.js
