[tool.poetry]
name = "djoek"
version = "0.1.0"
description = ""
authors = ["Ingmar Steen <iksteen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee-async = "^0.7.0"
fastapi = "^0.52.0"
aiofiles = "^0.4.0"
httpx = "^0.12.0"
aiopg = "^1.0.0"
uvicorn = "^0.11.3"
youtube_dl = "^2020.3.8"
python-dotenv = "^0.12.0"
python-jose = {version = "^3.1.0", extras = ["cryptography"]}
multidict = "^4.7.5"
mutagen = "^1.44.0"
isodate = "^0.6.0"
cachetools = "^4.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
